--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    login
+    </form>
+
+    <form class="loginForm" name="loginForm" autocomplete="on">
+
+      <h2 class="SLformHeader">Login</h2>
+
+      <div class="field">
+
+        <label for="username">username:</label>
+
+        <input type="text" id="username" name="username" placeholder="Enter uaername">
+
+      </div>
+
+      <p id="uError">*username already exists</p>
+
+      <div class="field">
+
+        <label for="">password:</label>
+
+        <input type="text" id="password" name="password" placeholder="Enter password">
+
+      </div>
+
+       <p id="pError">(password should be atleast 6 characters and contain both case, numbers and special characters)</p>
+
+      <input type="button" value="Login" id="btnLogIn">
+
+    </form>
 </body>
 </html>
