--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>hello wolrd</h1>
+    <button id='register'>click</button>
 </body>
+<script>
+    const reg =document.getElementById('register');
+    reg.addEventListener('click', function(e){
+        console.log('clicked');
+    });
+    </script>
 </html>
