--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebApp</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+
+        body {
+            background-color: gray;
+            font-family: 'Open Sans', sans-serif;
+        }
+
+        #nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        #nav a {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        #nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>hello wolrd</h1>
+    <div id="nav">
+        <a href="/">Home</a>
+        <a href="register">Sign Up</a>
+        <a href="login">Login</a>
+    </div>
+    <h1>Untitled</h1>
     <button id='register'>click</button>
 </body>
 <script>
-    const reg =document.getElementById('register');
-    reg.addEventListener('click', function(e){
+    const reg = document.getElementById('register');
+    reg.addEventListener('click', function (e) {
         console.log('clicked');
     });
-    </script>
+</script>
+
 </html>
