--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    register
+    <form class="registerForm" name="registerForm" autocomplete="on">
+  <h2 class="formHeader">Register</h2>
+  <div class="field">
+    <label for="username">username:</label>
+    <input type="text" id="username" name="username" placeholder="Enter uaername">
+  </div>
+  <p id="uError">*username already exists</p>
+  <div class="field">
+    <label for="">password:</label>
+    <input type="text" id="password" name="password" placeholder="Enter password">
+  </div>
+  <p id="pError">(password should be atleast 6 characters and contain both case, numbers and special characters)</p>
+  <input type="button" value="Register" id="btnRegister">
+</form>
 </body>
 </html>
