--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,8 +7,8 @@
     <title>Login</title>
 </head>
 <body>
-    <form class="registerForm" name="registerForm" autocomplete="on">
-  <h2 class="formHeader">Register</h2>
+    <form class="loginForm" name="loginForm" autocomplete="on">
+  <h2 class="formHeader">Login</h2>
   <div class="field">
     <label for="username">username:</label>
     <input type="text" id="username" name="username" placeholder="Enter uaername">
@@ -19,7 +19,7 @@
     <input type="text" id="password" name="password" placeholder="Enter password">
   </div>
   <p id="pError">(password should be atleast 6 characters and contain both case, numbers and special characters)</p>
-  <input type="button" value="Register" id="btnRegister">
+  <input type="button" value="Login" id="btnLogIn">
 </form>
 </body>
 </html>
