--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
         body {
-            background-color: gray;
+            background-color: rgb(217, 217, 217);
             font-family: 'Open Sans', sans-serif;
+            flex: auto;
         }
 
         #nav {
@@ -19,18 +20,14 @@
         }
 
         #nav a {
-            float: left;
-            color: #f2f2f2;
+            float: right;
+            color: #000000;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
             font-size: 17px;
         }
 
-        #nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
     </style>
 </head>
 
