--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
             background-color: rgb(217, 217, 217);
             font-family: 'Open Sans', sans-serif;
             flex: auto;
+            
         }
 
         #nav {
@@ -28,6 +29,15 @@
             font-size: 17px;
         }
 
+        #title {
+            text-align: center;
+            background-color: rgb(255, 255, 255);
+            padding: 14px 16px;
+            margin: 10%;
+            font-size: 20px;
+            border-radius: 25px;
+        }
+
     </style>
 </head>
 
@@ -37,8 +47,9 @@
         <a href="register">Sign Up</a>
         <a href="login">Login</a>
     </div>
-
-    <h1>Untitled</h1>
+    <div id="title">
+        <h1>Nova Star</h1>
+    </div>
 
 </body>
 
