--- a/frontend/login.html
+++ b/frontend/login.html
@@ -39,13 +39,13 @@
       margin-left: 40%;
       margin-right: 40%;
       font-size: 17px;
-      border-radius: 7%;
+      border-radius: 25px;
     }
   </style>
 </head>
 
 <body>
-  
+
   <div id="nav">
     <a href="/">Home</a>
     <a href="register">Sign Up</a>
