--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,46 +10,68 @@
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
     body {
-      background-color: rgb(217, 217, 217);
+      background: linear-gradient(to right, #585bff, #e957ff);
       font-family: 'Open Sans', sans-serif;
       flex: auto;
     }
 
-    #nav {
+    nav {
       overflow: hidden;
     }
 
-    #nav a {
-      float: right;
-      color: #000000;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
+    #home>a {
+            float: left;
+            color: #000000;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+        #serv>a {
+            float: right;
+            color: #000000;
+            text-align: center;
+            padding: 0px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
 
     .loginForm {
       text-align: center;
+      font-size: 20px;
     }
 
     #login {
       text-align: center;
-      border: solid black;
+      background: linear-gradient(to right, #7a7cff, #ec6eff);
       padding: 14px 16px;
       margin-left: 40%;
       margin-right: 40%;
-      font-size: 17px;
+      font-size: 20px;
       border-radius: 25px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+
+    #login>input {
+      border-radius: 10px;
+      text-decoration: none;
+      text-align: center;
+      font-family: 'Open Sans', sans-serif;
+
     }
   </style>
 </head>
 
 <body>
-
-  <div id="nav">
-    <a href="/">Home</a>
-    <a href="register">Sign Up</a>
-  </div>
+  <nav>
+    <div id="home">
+        <img src="/assets/favicon/favicon.ico">
+        <a href="/">Nova Star</a>
+    </div>
+    <div id="serv">
+        <a href="sign-up">Sign Up</a>
+    </div>
+</nav>
   <form class="loginForm" name="loginForm" autocomplete="on">
     <h2 class="SLformHeader">Login</h2>
     <div class="field" id="login">
