--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,17 @@
             display: none;
         }
 
+        nav {
+            text-decoration: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 80px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+
     </style>
 </head>
 
@@ -31,11 +42,17 @@
             <a href="login">Login</a>
         </div>
     </nav>
-    <div id="title">
+    <div class="title">
         <img src="/assets/favicon/android-chrome-192x192.png">
         <h1>Nova Star</h1>
     </div>
-
+    <div class="title">
+        <h1># Open space for you</h1>
+        <p> Play 'fun' Games with friends</p>
+    </div>
+    <a href="#">About</a><br>
+    <a href="#">Contact</a><br>
+    <a href="#">Support</a><br>
 </body>
 
 </html>
