--- a/frontend/loby.html
+++ b/frontend/loby.html
@@ -9,4 +9,12 @@
 <body>
     Loby
 </body>
+<script>
+    $(function() {
+    $.get( "/sample-api", function( data ) {
+        var title = data.text;
+        document.title = title;
+    });
+});
+</script>
 </html>
