--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,14 +19,16 @@
 
         nav {
             position: fixed;
+            display: flex;
+            justify-content: space-between;
+            align-self: center;
+            padding: 1%;
             top: 0;
-            left: 0;
-            bottom: 0;
+            left: 0%;
             width: 100%;
-            height: 80px;
+            height: 30%;
             /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
         }
-
     </style>
 </head>
 
@@ -49,9 +51,11 @@
         <h1># Open space for you</h1>
         <p> Play 'fun' Games with friends</p>
     </div>
-    <a href="#">About</a><br>
-    <a href="#">Contact</a><br>
-    <a href="#">Support</a><br>
+    <div class="about">
+        <a href="#">About</a><br>
+        <a href="#">Contact</a><br>
+        <a href="#">Support</a><br>
+    </div>
 </body>
 
 </html>
