--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
 <body>
     <!--Navigation -->
     <header class="header-overlay header-logged">
-        <div class="logo">
-            <a href="#" class="home"><img src="/assets/favicon/favicon.ico"> Nova Star</a>
+        <div class="novastar">
+            <a href="#" class="logo"><img src="/assets/favicon/favicon-32x32.png"> Nova Star</a>
         </div>
         <!--<div class="nav">
             <ul>
@@ -22,10 +22,8 @@
             </ul>
         </div>-->
         <div class="user">
-            <a href="sign-up">
-                <box-icon type='solid' name='user'></box-icon>Login
-            </a>
-            <a href="login">Sign Up</a>
+            <a href="login">Login</a>
+            <a href="sign-up">Sign Up</a>
         </div>
     </header>
 
