--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <!--Navigation -->
     <header class="header-overlay header-logged">
         <div class="novastar">
-            <a href="#" class="logo"><img src="/assets/favicon/favicon-32x32.png"> Nova Star</a>
+            <a href="#" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
         </div>
         <!--<div class="nav">
             <ul>
