--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -26,7 +26,9 @@
             <a href="sign-up">Sign Up</a>
         </div>
     </header>
-
+    <div class="satellite">
+        <!-- <img src="/assets/—Pngtree—vector free buckle cartoon satellite_4671210.png"> -->
+    </div>
     <!--Title-->
     <div class="title">
         <img src="/assets/favicon/android-chrome-192x192.png">
