--- a/frontend/index/user/user.html
+++ b/frontend/index/user/user.html
@@ -5,11 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loby</title>
+    <title>user</title>
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    font-family: 'Open Sans', sans-serif;
+    padding: 0%;
+    margin: 0%;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+:root {
+    --main1-color: linear-gradient(to right, #000000, #7446ff);
+    --main2-color: linear-gradient(to right, #7a7cff, #ec6eff);
+    --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    --text-color: #ffffff;
+}
+
+body {
+    background: var(--main1-color);
+    color: var(--text-color);
+}
+</style>
 <body>
-    Loby
+    cfghm
 </body>
 <script>
 </script>
