--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -9,6 +9,36 @@
     <link rel="stylesheet" href="./frontend/css/index.css">
     <title>Nova Star</title>
 </head>
+<style>
+    body::-webkit-scrollbar {
+        display: none;
+    }
+
+    .title {
+        text-align: center;
+        background: var(--main2-color);
+        padding: 14px 16px;
+        margin-left: 12%;
+        margin-right: 12%;
+        margin-bottom: 6%;
+        margin-top: 1%;
+        width: 73%;
+        font-size: 20px;
+        border-radius: 25px;
+        box-shadow: var(--shadow);
+    }
+
+    .satellite {
+        background: url("/assets/—Pngtree—vector\ free\ buckle\ cartoon\ satellite_4671210.png") no-repeat;
+        width: 100px;
+        height: 100px;
+        margin-top: 70px;
+        margin-left: 60px;
+        background-size: contain;
+        position: relative;
+        animation: moving-satellite 30s ease-in-out infinite forwards;
+    }
+</style>
 
 <body>
     <!--Navigation -->
