--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -12,8 +12,8 @@
 
 </head>
 <style>
-  body {
-    background: var(--main1-color);
+  body::-webkit-scrollbar {
+    display: none;
   }
 
   .UI {
