--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -11,8 +11,7 @@
 </head>
 <style>
     body {
-        background: var(--main1-color);
-        color: var(--text-color);
+        color: white;
     }
 </style>
 
