--- a/frontend/index/sign-up.html
+++ b/frontend/index/sign-up.html
@@ -90,7 +90,7 @@
         <input type="text" id="con_password" name="password" placeholder="Confirm password">
       </div>
       <div class="fp">
-        <a href="#">Already have account?</a>
+        <a href="/login">Already have account?</a>
       </div>
       <div class="field"><button id="btnLogIn" onclick="senddata()">sign-up</button></div>
     </form>
