--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header-overlay header-logged">
         <div class="novastar">
-            <a href="#" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
+            <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
         </div>
         <!--<div class="nav">
             <ul>
